==============================================================================
TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.3.1 [wip]
. (kfsone) "maddavo" plugin is now much smarter
   - will try to download a smaller prices file,
   - will check the first line of the file to see if it's an update
     before downloading the whole thing :)
. (kfsone) You can now use "--opt=help" to get help for plugins, e.g.
   trade.py import --plugin=maddavo --opt=help
. (kfsone) Added "--ls-penalty" ("--lsp") for biasing "run" calculations
   in favor of shorter supercruise times.
+ Stations, Systems, data: kfsone, maddavo, gazelle, shirkan

v6.3.0 Dec 23 2014
. (OpenSS) Script for Windows users (see scripts/README.txt)!
. (kfsone) Added support for pad sizes at stations,
. (kfsone) Revamped output from "local", "buy", "sell" and "olddata".
    - "--ages" is the default now (so the option is not needed),
    - Added pad size display,
    - Improved black market display,
    - Changed '+' to '/' for consistency on station lines,
. (bgol) Fixed weirdness with rangeCache
. (bgol/kfsone) Fixed jump distances and performance of "nav" command
+ Stations, Data: kfsone

v6.2.4 Dec 21 2014
. (kfsone) Experimental "add-station" command in misc,
. (kfsone) Added "--near" to olddata command,
. (kfsone) Route calculation performance,
. (kfsone) Added "Black Market" flag to station data,
. (kfsone) Added Black Market indicators to "local" command,
. (kfsone) Reorganized Ship and ShipVendor data (prices are ship based now),
. (kfsone) Draft version of "jsonprices",
. (gazelle) Auto-completion for bash users (see scripts/README.txt)
. (gazelle) Nice overhaul of the csv export command
. (kfsone) Fix for UTF-8 decoding error,
. (kfsone) Rebuild cache before .prices file after downloading .csvs
. (maddavo) Combat Stabilisers do exist
+ Systems, Stations, Data: Maddavo, Gazelle, Kfsone, many others
